<resources>
    <string name="app_name">FTE</string>
    <string name="title_activity_main">FTE</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="agree">Agree</string>
    <string name="tutorial_title">Remote Control</string>
    <string name="done">Done</string>
    <string name="user_agreement_title">End User Agreement</string>
    <string name="user_agreement_descr">This is your End User Agreement. Please read carefully.</string>
    <string name="user_agreement_tip">Use the D-Pad to scroll End User Agreement.</string>
    <string name="str_hicloud_congratulations">Congratulations %1$s!</string>
    <string name="str_hicloud_logged_in">You have successfully logged in the CVTE Cloud account</string>
    <string name="str_logout">Log out</string>
</resources>