<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2012 - Jamdeo
 */
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hicloud_logged_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical" >

    <RelativeLayout
        android:id="@+id/hicloud_logged_in_inner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/info_side_margin"
        android:layout_marginRight="@dimen/info_side_margin"
        android:gravity="center_vertical"
        android:padding="@dimen/action_area_padding" >

        <ImageView
            android:id="@+id/imageview_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:src="@drawable/fte_icn_done" />

        <TextView
            android:id="@+id/textview_congratulations"
            style="@style/Custom.Info.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginLeft="@dimen/hicloud_text_margin"
            android:text="@string/str_hicloud_congratulations"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/textview_logged_in"
            style="@style/Custom.Info.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textview_congratulations"
            android:layout_gravity="left"
            android:layout_marginBottom="@dimen/hicloud_text_margin"
            android:layout_marginLeft="@dimen/hicloud_text_margin"
            android:text="@string/str_hicloud_logged_in"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/button_hicloud_logout"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textview_logged_in"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/hicloud_text_margin"
            android:text="@string/str_logout" />
    </RelativeLayout>

</RelativeLayout>